--- a/index.html
+++ b/index.html
@@ -47,47 +47,49 @@
 
 		<!-- drop-menu -->
 		<div class="drop-menu">
-			<div class="container">
-				<div class="drop-menu__inner">
-
-					<div class="drop-menu__title">
-						<a href="index.html" class="drop-menu__logo">
-							<img src="images/drop-menu-logo.svg" alt="">
-						</a>
-						<a href="#" class="drop-menu__closer" id="drop-menu-closer">
-							<i class="fal fa-times"></i>
-						</a>
-					</div>
-
-					<div class="drop-menu__main">
-						<div class="drop-menu__left">
-							<ul class="drop__main-menu">
-								<li><a href="#">HOME</a></li>
-								<li><a href="#">THE PROCESS</a></li>
-								<li><a href="#">SERVICES</a></li>
-								<li><a href="#">PORTFOLIO</a></li>
-								<li><a href="#">BLOG</a></li>
-								<li><a href="#">FAQ</a></li>
-								<li><a href="#">CONTACT US</a></li>
-							</ul>
+			<div class="drop-menu__in">
+				<div class="container">
+					<div class="drop-menu__inner">
+	
+						<div class="drop-menu__title">
+							<a href="index.html" class="drop-menu__logo">
+								<img src="images/drop-menu-logo.svg" alt="">
+							</a>
+							<a href="javascript:void(0)" class="drop-menu__closer drop-canvas-close" id="drop-menu-closer">
+								<i class="fal fa-times"></i>
+							</a>
 						</div>
-						<div class="drop-menu__right">
-							<div class="drop-menu__social">
-								<h4>SOCIAL</h4>
-								<ul>
-									<li><a href="#">TW</a></li>
-									<li><a href="#">FB</a></li>
-									<li><a href="#">IN</a></li>
+	
+						<div class="drop-menu__main">
+							<div class="drop-menu__left">
+								<ul class="drop__main-menu">
+									<li><a href="index.html">HOME</a></li>
+									<li><a href="#">THE PROCESS</a></li>
+									<li><a href="projects.html">SERVICES</a></li>
+									<li><a href="#">PORTFOLIO</a></li>
+									<li><a href="blog.html">BLOG</a></li>
+									<li><a href="faq.html">FAQ</a></li>
+									<li><a href="contact-us.html">CONTACT US</a></li>
 								</ul>
 							</div>
-							<div class="drop-menu__r-cont">
-								<h4 class="text-uppercase">United kingdom</h4>
-								<p>3 Watchgate, Newby Road Industrial Estate, Hazel 
-									<br>
-									Grove, SK7 5DB</p>
-							</div>
-							<div class="drop-menu__r-ellipse-start">
-								<p>Start Your Project</p>
+							<div class="drop-menu__right">
+								<div class="drop-menu__social">
+									<h4>SOCIAL</h4>
+									<ul>
+										<li><a href="#">TW</a></li>
+										<li><a href="#">FB</a></li>
+										<li><a href="#">IN</a></li>
+									</ul>
+								</div>
+								<div class="drop-menu__r-cont">
+									<h4 class="text-uppercase">United kingdom</h4>
+									<p>3 Watchgate, Newby Road Industrial Estate, Hazel 
+										<br>
+										Grove, SK7 5DB</p>
+								</div>
+								<div class="drop-menu__r-ellipse-start">
+									<p>Start Your Project</p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -108,14 +110,14 @@
 	
 						<div class="main-menu d-md-block d-none">
 							<ul>
-								<li><a href="#">services</a></li>
+								<li><a href="projects.html">services</a></li>
 								<li><a href="#">portfolio</a></li>
-								<li><a href="#">contact</a></li>
+								<li><a href="contact-us.html">contact</a></li>
 							</ul>
 						</div>
 	
 						<div class="header-right">
-							<a href="#">menu</a>
+							<a href="javascript:void(0)" class="drop-canvas-open">menu</a>
 						</div>
 					</div>
 				</div>
