--- a/index.html
+++ b/index.html
@@ -197,15 +197,15 @@
 
 						<div class="count__ellipses-wrap">
 							<div class="count__ellipse count__ellipse--1">
-								<h3><span class="count">3,218</span></h3>
+								<h3><span class="counter">3218</span></h3>
 								<p>project completed</p>
 							</div>
 							<div class="count__ellipse count__ellipse--2">
-								<h3><span class="count">32</span></h3>
+								<h3><span class="counter">32</span></h3>
 								<p>years experience</p>
 							</div>
 							<div class="count__ellipse count__ellipse--3 count-ellipse--theme1">
-								<h3><span class="count">24</span></h3>
+								<h3><span class="counter">24</span></h3>
 								<p>hour support</p>
 							</div>
 						</div>
