--- a/form.html
+++ b/form.html
@@ -106,7 +106,7 @@
 						
 						<div class="form-x">
 							<div class="form-x__title">
-								<h3 class="h3">Got a project to discuss? Reach out and say Hi</h3>
+								<h3 class="h3">Got a project to discuss? <br class="d-sm-none d-block"> Reach out and say Hi</h3>
 							</div>
 							<div class="form-x__main row gx-xl-5">
 								<div class="col-md-6">
