--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 										<br>
 										Grove, SK7 5DB</p>
 								</div>
-								<div class="drop-menu__r-ellipse-start">
+								<a href="#" class="drop-menu__r-ellipse-start">
 									<p>Start Your Project</p>
-								</div>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -110,9 +110,9 @@
 							<h1 class="h1">Bringing brands to life 
 								<br>
 								<span class="op8">at events worldwide</span></h1>
-							<div class="hero-ellipse-start">
+							<a href="#" class="hero-ellipse-start">
 								<p>Start Your Project</p>
-							</div>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -312,9 +312,9 @@
 
 
 						<div class="b__btm-row">
-							<div class="ellipse__ins">
+							<a href="#" class="ellipse__ins">
 								<p>Instagram</p>
-							</div>
+							</a>
 						</div>
 
 					</div>
