--- a/case-study.html
+++ b/case-study.html
@@ -63,9 +63,9 @@
 										<br>
 										Grove, SK7 5DB</p>
 								</div>
-								<div class="drop-menu__r-ellipse-start">
+								<a href="#" class="drop-menu__r-ellipse-start">
 									<p>Start Your Project</p>
-								</div>
+								</a>
 							</div>
 						</div>
 					</div>
